Fix scrollbar stylining for reactions picker.
Scrollbar previously collapsed when searching for
emoji and became misaligned. Fixed in CSS.

--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -144,7 +144,7 @@
     padding: 0.5em 0;
     position: relative;
     overflow: hidden;
-    display: inline-block;
+    display: block;
     height: 16.5em;
 }
 
